# seneca-hack

./: .gitignore  README.md  app.py  pyproject.toml
.streamlit/: config.toml
backend/: activity_poi_catalog.py  charger_catalog.py  intraday_activity_model.py  map_builder.py  mobility_simulator.py  model_calibration.py  monte_carlo.py  observed_targets.py  optimizer.py  road_grid_dashboard.py  road_network.py  simulation_validation.py  spatial_assembler.py
backend/apis/: api.py
backend/data/: fsa_population_scaling.csv  fsa_traffic_weights.csv  fsa_zone_classification.csv  greenbutton_profile.csv  greenbutton_sample.xml  hydro_one_stations.csv  ieso_load_profile.csv  toronto_hydro_feeders.geojson  toronto_traffic_fsa_counts.csv  (+1 more)
data_preparation/: benchmark_simulation_scale.py  fetch_activity_pois.py  fetch_pois.py  fetch_real_world_grid.py  fetch_statcan_fsa_population.py  fetch_toronto_traffic.py  prepare_data.py  run_model_validation.py  test_api.py
docs/: README.md  architecture.md  blueprint.md  implementation_plan.md  intraday_routing_distribution_update.md  model_assumptions.md  phase1.md  phase2.md  pr_description.md
frontend/: index.html
presentation/: capture_screenshots.py  index.html
tasks/: lessons.md  todo.md
tests/: conftest.py  test_activity_poi_catalog.py  test_benchmark_simulation_scale.py  test_intraday_activity_model.py  test_mobility_simulator.py  test_model_assumption_coverage.py  test_monte_carlo.py  test_optimizer.py  test_road_grid_dashboard.py  test_road_grid_mapping.py  test_run_model_validation.py  test_spatial_assembler.py
(+15 files in other folders)
